a little change here!

--- a/templates/news/actualhomepage.html
+++ b/templates/news/actualhomepage.html
@@ -20,7 +20,7 @@
         </div>
     </div>
 
-    <button onclick="scrollToTop()" id="topBtn" class="btn btn-outline-info" title="↑"><strong>TOP</strong></button>
+    <button onclick="scrollToTop()" id="topBtn" class="btn btn-outline-info" title="Top"><strong>↑</strong></button>
 
 {% block content %}
 {% endblock %}
